// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListingCard matches snapshot 1`] = `
<a
  aria-label="ListingCard.screenreader.label"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="media"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
        style="padding-bottom: 100%;"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="info"
  >
    <div
      class="authorRow"
    >
      <div
        class="authorName"
      >
        ListingCard.author
      </div>
    </div>
    <div
      class="title"
    >
      listing1 title
    </div>
    <div
      class="price"
      title="55"
    >
      <span
        class="pricePrefix"
      >
        ListingCard.priceFromPrefix
      </span>
      <span
        class="priceValue"
      >
        55
      </span>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot without price 1`] = `
<a
  aria-label="listing1 title"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="media"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
        style="padding-bottom: 100%;"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="info"
  >
    <div
      class="authorRow"
    >
      <div
        class="authorName"
      >
        ListingCard.author
      </div>
    </div>
    <div
      class="title"
    >
      listing1 title
    </div>
  </div>
</a>
`;
